Bug 104328. Re-use fast code from nsIRDFContainerUtils to implement nsRDFContainer::IndexOf; fix infinite loop in nsRDFContainerUtils::IndexOf. Patch from tingley@sundell.net, r=waterson, sr=shaver.